{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 8,
  "lineage": "d68679bc-1548-de1b-83f0-2d22b92da785",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:027929308165:internet-gateway/igw-04bce4e2f3de55201",
            "id": "igw-04bce4e2f3de55201",
            "owner_id": "027929308165",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "caro-internet-gateway"
            },
            "tags_all": {
              "Name": "caro-internet-gateway"
            },
            "vpc_id": "vpc-04f006a7e5cd7bc28"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:027929308165:route-table/rtb-083c5b3db8b647d62",
            "id": "rtb-083c5b3db8b647d62",
            "owner_id": "027929308165",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "bizkit-dev-private-rt"
            },
            "tags_all": {
              "Name": "bizkit-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f006a7e5cd7bc28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "027929308165",
            "id": "rtb-083c5b3db8b647d62",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:027929308165:route-table/rtb-07f0e5fbd60e58e7d",
            "id": "rtb-07f0e5fbd60e58e7d",
            "owner_id": "027929308165",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04bce4e2f3de55201",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bizkit-dev-public-rt"
            },
            "tags_all": {
              "Name": "bizkit-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f006a7e5cd7bc28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "027929308165",
            "id": "rtb-07f0e5fbd60e58e7d",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfbaf05aec599516",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-083c5b3db8b647d62",
            "subnet_id": "subnet-0abcea6ab04b44b49"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050ea35a8515f3d2e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-07f0e5fbd60e58e7d",
            "subnet_id": "subnet-0db2676f4f37163c6"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:027929308165:subnet/subnet-0abcea6ab04b44b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abcea6ab04b44b49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "027929308165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "bizkit-dev-private-1"
            },
            "tags_all": {
              "Name": "bizkit-dev-private-1"
            },
            "vpc_id": "vpc-04f006a7e5cd7bc28"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "027929308165",
            "id": "subnet-0abcea6ab04b44b49",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:027929308165:subnet/subnet-0db2676f4f37163c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db2676f4f37163c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "027929308165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "bizkit-dev-public-1"
            },
            "tags_all": {
              "Name": "bizkit-dev-public-1"
            },
            "vpc_id": "vpc-04f006a7e5cd7bc28"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "027929308165",
            "id": "subnet-0db2676f4f37163c6",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:027929308165:vpc/vpc-04f006a7e5cd7bc28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a84f58d0999ac572",
            "default_route_table_id": "rtb-0371da3601292800b",
            "default_security_group_id": "sg-0b5b8e3a5492e16d9",
            "dhcp_options_id": "dopt-045835571840b079d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f006a7e5cd7bc28",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0371da3601292800b",
            "owner_id": "027929308165",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "bizkit-vpc"
            },
            "tags_all": {
              "Name": "bizkit-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "027929308165",
            "id": "vpc-04f006a7e5cd7bc28",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}